hphp/test/slow/async/dispose.php.expectf
Fatal error: cannot declare constructors, destructors, and magic methods such as '__dispose' async in %s/hphp/test/slow/async/dispose.php on line 4
